src/test/ui/object-safety/object-safety-mentions-Self.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:24:5
   |
LL |     t
   |     ^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` references the `Self` type in its arguments or return type
   = note: required when trying to coerce from type `&T` to type '&dyn Bar`

error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:30:5
   |
LL |     t
   |     ^ the trait `Baz` cannot be made into an object
   |
   = note: method `baz` references the `Self` type in its arguments or return type
   = note: required when trying to coerce from type `&T` to type '&dyn Baz`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
